Specified requirement to use built-in text file reader in Numerical Methods assignment #11.

--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No11_TrapezoidIntegration.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No11_TrapezoidIntegration.html
@@ -37,8 +37,8 @@
 
 <p>In summary, the power levels for the three experiment sections are given as follows:
 <ul>
-<li>For 0 &le; t &le; 72 hours, power levels are given in the linear data <a href="supportingFiles/linearData.txt">text file</a>.  (You must use the text file reader.)</li>
-<li>For 72 hours < t < 96 hours, the equation is... $\frac{1}{5} sin\left(\frac{\pi}{12}\left(t+15\right)\right)+\frac{3}{5}$</li>
+<li>For 0 &le; t &le; 72 hours, power levels are given in the linear data <a href="supportingFiles/linearData.txt">text file</a>.  (You must use the built-in text file reader; not a separate module.)</li>
+<li>For 72 hours < t < 96 hours, the equation is $\frac{1}{5} sin\left(\frac{\pi}{12}\left(t+15\right)\right)+\frac{3}{5}$</li>
 <li>For 96 hours &le; t &le; 9 days, use the <a href="supportingFiles/stepData.csv">CSV step data</a>. (You must use the CSV module's reader.)  Note that time zero in the step data file is 96 hours absolute time.  For each $\Delta t$ in the step data, the corresponding power level was the average power level during that time period.</li>
 </ul>
 
