Added execution time examples to Numerical Methods examples, and added execution time links to the Language Resources page.

--- a/Common/LanguageResources.html
+++ b/Common/LanguageResources.html
@@ -23,6 +23,9 @@
 	<li><a href="http://www.numpy.org/">The NumPy website</a></li>
 	<li><a href="https://www.scipy.org/index.html">The SciPy website</a></li>
 </ul></p>
+<h3>Comparing Execution Time</h3>
+<p><ul>
+<li>The documentation for the <a href="https://docs.python.org/3/library/timeit.html"><em>timeit</em> module</a> has several examples.</li></ul></p>
 
 <h2>HTML5</h2>
 <p><ul>
@@ -31,7 +34,13 @@
 	<li>The <a href="https://www.mathjax.org/">MathJax</a> website</li>
 </ul></p>
 
-<h2>Bash</h2>
+<h2>Bash &amp; Linux</h2>
+<h3>Comparing Execution Time</h3>
+<p>Using the Bash shell (terminal), you can compare scripts that run either interpreted code (e.g., Python) or compiled executables (e.g., from C++ or Fortran).  If you run into a "permission denied" error when executing your scripts, try adding execution permission by entering <em>chmod +x myscript.sh</em> in the terminal.
+<ul>
+<li><a href="http://unix.stackexchange.com/questions/53841/how-to-use-a-timer-in-bash">This link</a> has some good ideas for timing execution, including the simple linux command <em>time myscript.sh</em>.</li>
+</ul></p>
+
 
 <p><br/>Copyright &copy; 2017 by S. Cooley</p>
 </body>
