--- a/NumericalMethods/Examples/CodeExamples.html
+++ b/NumericalMethods/Examples/CodeExamples.html
@@ -13,6 +13,12 @@
 <li><a href="JavaScript/JavaScript_objects/watch.html">watch.html</a>  (This is the example used in class on 3/1/2017.)</li>
 </ul></p>
 
+<h2>Comparing Execution Time</h2>
+<h3>Python 3</h3>
+<p><ul>
+<li><a href="Python3/timeit_cleanedUp.ipynb">timeit_cleanedUp.ipynb</a> (This is the example for 3/29/2017)</li>
+</ul></p>
+
 <p><br/>Copyright &copy; 2017 by S. Cooley</p>
 </body>
 </html>
