Added Numerical Methods assignment #12 Linear Regression with its notebook template file. Also updated the assignments index accordingly.

--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -20,6 +20,7 @@
 <li><a href="NumericalMethods_Assignment_No9_Euler_RungeKutta.html">Assignment #9</a> &ndash; Solving an ODE with the Euler &amp; 4th-order Runge-Kutta methods</li>
 <li><a href="NumericalMethods_Assignment_No10_MultiEquation_RK.html">Assignment #10</a> &ndash; Solving multiple ODE's simultaneously with the 4th-order Runge-Kutta method</li>
 <li><a href="NumericalMethods_Assignment_No11_TrapezoidIntegration.html">Assignment #11</a> &ndash; Integrating with the Trapezoid Method</li>
+<li><a href="NumericalMethods_Assignment_No12_LinearRegression.html">Assignment #12</a> &ndash; Curve-fitting using linear regression</li>
 </ul></p>
 
 
